--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "buildCommand": "cd client && npm install && npm run build",
+        "installCommand": "cd client && npm install",
+        "buildCommand": "cd client && npm run build",
         "distDir": "client/build"
       }
     }
